Fix overflow on html

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -37,6 +37,10 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 /* Set core body defaults */
 body {
   min-height: 100vh;
